# forecasttools-py

./: .gitignore  .pre-commit-config.yaml  README.md  README.qmd  _typos.toml  pyproject.toml  suggestion.txt
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: blank.md
.github/actions/pre-commit/: action.yaml
.github/workflows/: deptry-check.yaml  pre-commit.yaml  render-README.yaml  render-readme.yaml  test.yaml
assets/: comments.txt
assets/misc/: references.bib
assets/retired-scripts/: render-readme.yaml
cfa/stf/forecasttools/: __init__.py  aggregate_to_weekly.py  arviz_helpers.py  location_constants.py  location_table.py  prop_data.py  utils.py
cfa/stf/forecasttools/data/: us_location_pop.csv
forecasttools/: __init__.py  arviz.py  cdc_baseline.py  daily_to_epiweekly.py  data.py  example_flu_forecast.nc  example_flu_forecast_w_dates.nc  example_flu_forecast_wo_dates.nc  example_flusight_submission.parquet  idata_dates.py  idata_to_df_w_dates.py  idata_to_tidy.py  idata_w_dates_to_df.py  location_table.csv  location_table.parquet  nhsn_hosp_COVID.csv  nhsn_hosp_COVID.parquet  nhsn_hosp_flu.csv  nhsn_hosp_flu.parquet  pull_data_cdc.py  pull_data_cdc_gov.py  recode_locations.py  sbc.py  sbc_plots.py  sbc_utils.py  to_flusight.py  to_hubverse.py  to_scoringutils.py  trajectories_to_quantiles.py  united_states.parquet  utils.py
forecasttools_py/: __init__.py  data.py  to_flusight_hub.py  trajectories_to_quantiles.py
notebooks/: add_time_coords_to_idata_dimension.py  check_time_range.py  community_meeting_demo.qmd  create_parquet_files_from_csv.py  datasets_and_idata_creation.qmd  date_v_datetime.py  df_from_idata_w_dates_to_R_data_frame.py  df_from_idata_w_dates_to_tidy_draws.py  examining_idata_w_dates.py  example_fixes.py  explore_add_dates_to_idata.py  explore_add_dates_to_idata_via_coords.py  explore_add_dates_to_idata_via_groups.py  flusight_from_idata.qmd  forecasttools_community_demo_2024-11-19.qmd  hosp_admit_neg_bin_concentration.csv  idata_general_time_representation.py  idata_to_df_then_scores.py  idata_to_tidy_draws.py  idata_to_tidy_v2.py  iedr.csv  latent_infections.csv  location_recoding.py  mvp_issue_tidy_draws.py  notebook-references.bib  observed_ed_visits.csv  observed_hospital_admissions.csv  output_tidy_draws.parquet  p_ed.csv  pyrenew_dates_to_tidy.qmd  rate.csv  references.bib  render_test_idata_general_time_representation.qmd  renew_explore_add_dates_to_idata.py  rt.csv  rtu.csv  rtu_weekly_diff_first_diff_ar_process_noise.csv  sbc_model_checking.qmd  score_flusight_submission.qmd  score_idata_forecasts.qmd  (+7 more)
scripts/: build_us_location_pop_table.R  render-quarto-readme.sh
scripts/hooks/: render-quarto-readme.sh
tests/: test_add_time_coords_to_idata.py  test_arviz.py  test_daily_to_epiweekly.py  test_general_add_dates.py  test_idata_dates.py  test_idata_to_tidy.py  test_pull_data_cdc.py  test_recoding_locations.py  test_sbc.py
tests/cfa/stf/forecasttools/: test_aggregate_to_weekly.py  test_arviz.py  test_location_table.py  test_prop_data.py
tests/cfa/stf/forecasttools/test_data/: test_idata.nc
vignettes/: example-infectious-disease-forecast.qmd  format-flusight-output.qmd
