[project]
name = "cfa-stf-forecasttools"
version = "0.1.0"
description = "Forecasting helpers for CFA short-term forecasting."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  {name = "Damon Bayer", email = "xum8@cdc.gov"},
  {name = "Dylan H. Morris"},
  {name = "Subekshya Bidari"},
  {name = "Jon Kislin", email = "qxk3@cdc.gov"},
]
dependencies = [
  "arviz[h5netcdf]>=1.1.0",
  "numpy>=2.2",
  "polars[pyarrow,numpy]>=1.36",
  "xarray>=2025.10.1",
]

[project.urls]
Repository = "https://github.com/CDCgov/forecasttools-py"
Issues = "https://github.com/CDCgov/forecasttools-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["cfa"]
artifacts = [
  "cfa/stf/forecasttools/test_data/*.nc",
]

[tool.hatch.build.targets.sdist]
include = [
  "cfa/stf/forecasttools",
  "tests/cfa/stf/forecasttools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  {include-group = "test"},
  "ipykernel",
  "jupyter>=1.0.0",
  "pre-commit>=4.6.0",
]
test = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
override-dependencies = [
  "arviz-base[h5netcdf]==1.3.0.dev0",
  "arviz-plots==1.3.0.dev0",
  "arviz-stats[xarray]==1.3.0.dev0",
]

[tool.uv.sources]
arviz-base = { git = "https://github.com/arviz-devs/arviz-base", rev = "main" }
arviz-plots = { git = "https://github.com/arviz-devs/arviz-plots", rev = "main" }
arviz-stats = { git = "https://github.com/arviz-devs/arviz-stats", rev = "main" }
