[project]
name = "cfa-stf-forecasttools"
version = "0.1.0"
description = "Forecasting helpers for CFA short-term forecasting."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "CFA STF Team"},
]
dependencies = [
  "arviz[h5netcdf]>=1.1.0",
  "arviz-base[h5netcdf] @ git+https://github.com/arviz-devs/arviz-base@main",
  "arviz-plots @ git+https://github.com/arviz-devs/arviz-plots@main",
  "arviz-stats[xarray] @ git+https://github.com/arviz-devs/arviz-stats@main",
  "numpy>=2.2",
  "polars[numpy,pyarrow]>=1.36",
  "xarray>=2025.10.1",
]

[project.urls]
Repository = "https://github.com/CDCgov/forecasttools-py"
Issues = "https://github.com/CDCgov/forecasttools-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["cfa"]

[tool.hatch.build.targets.wheel.force-include]
"cfa/stf/forecasttools/data/us_location_pop.csv" = "cfa/stf/forecasttools/data/us_location_pop.csv"

[tool.hatch.build.targets.sdist]
include = [
  "cfa/stf/forecasttools",
  "scripts/build_us_location_pop_table.R",
  "tests/cfa/stf/forecasttools",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  {include-group = "test"},
  "ipykernel",
  "jupyter>=1.0.0",
  "pre-commit>=4.6.0",
]
test = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.uv]
override-dependencies = [
  "arviz-base[h5netcdf] @ git+https://github.com/arviz-devs/arviz-base@main",
  "arviz-plots @ git+https://github.com/arviz-devs/arviz-plots@main",
  "arviz-stats[xarray] @ git+https://github.com/arviz-devs/arviz-stats@main",
]

[tool.uv.sources]
arviz-base = { git = "https://github.com/arviz-devs/arviz-base", rev = "main" }
arviz-plots = { git = "https://github.com/arviz-devs/arviz-plots", rev = "main" }
arviz-stats = { git = "https://github.com/arviz-devs/arviz-stats", rev = "main" }
